WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140091
calc() cannot be used in steps() for -webkit-animation-timing-function
https://bugs.webkit.org/show_bug.cgi?id=140091
Summary
calc() cannot be used in steps() for -webkit-animation-timing-function
Chris Dumez
Reported
2015-01-05 12:51:33 PST
calc() cannot be used in steps() for -webkit-animation-timing-function because the CSS Parser does not handle calculated values properly.
Attachments
Patch
(4.51 KB, patch)
2015-01-05 12:55 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-01-05 12:55:14 PST
Created
attachment 243993
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-05 20:46:52 PST
Comment on
attachment 243993
[details]
Patch Clearing flags on attachment: 243993 Committed
r177946
: <
http://trac.webkit.org/changeset/177946
>
WebKit Commit Bot
Comment 3
2015-01-05 20:46:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug