calc() cannot be used in steps() for -webkit-animation-timing-function https://bugs.webkit.org/show_bug.cgi?id=140091

Reviewed by Darin Adler.

Source/WebCore:

calc() could not be used in steps() for -webkit-animation-timing-function
CSS property because the CSS parser did not handle this case properly.
This patch addresses the issue.

Test: fast/css/animation-steps-calculated-value.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseAnimationTimingFunction):

LayoutTests:

Add a layout test to make sure that calc() can be used in steps() for
-webkit-animation-timing-function CSS property.

* fast/css/animation-steps-calculated-value-expected.txt: Added.
* fast/css/animation-steps-calculated-value.html: Added.


Canonical link: https://commits.webkit.org/158076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177946 268f45cc-cd09-0410-ab3c-d52691b4dbfc